Refactor navigation links for clarity and update impact section background color for consistency

--- a/index.html
+++ b/index.html
@@ -18,24 +18,18 @@
     <img src="img/cw_logo-2.png" alt="charity: water logo" class="brand" style="height:20px;">
     <!-- Navigation links with dropdown menus -->
     <nav>
-      <!-- JOIN THE GLOBAL MOVEMENT with dropdown and arrow -->
+      <!-- JOIN THE GLOBAL MOVEMENT with dropdown -->
       <div class="nav-item nav-dropdown">
-        <a href="#">
-          JOIN THE GLOBAL MOVEMENT
-          <span class="nav-arrow" aria-hidden="true">▾</span>
-        </a>
+        <a href="#">JOIN THE GLOBAL MOVEMENT</a>
         <div class="dropdown-menu">
           <a href="#">Give monthly</a>
           <a href="#">Become a water sponsor</a>
           <a href="#">Plan legacy giving</a>
         </div>
       </div>
-      <!-- ABOUT US with dropdown and arrow -->
+      <!-- ABOUT US with dropdown -->
       <div class="nav-item nav-dropdown">
-        <a href="#">
-          ABOUT US
-          <span class="nav-arrow" aria-hidden="true">▾</span>
-        </a>
+        <a href="#">ABOUT US</a>
         <div class="dropdown-menu">
           <a href="#">Our work</a>
           <a href="#">How we work</a>
