--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <nav>
       <!-- JOIN THE GLOBAL MOVEMENT with dropdown -->
       <div class="nav-item nav-dropdown">
-        <a href="#">JOIN THE GLOBAL MOVEMENT</a>
+        <a href="#">
+          JOIN THE GLOBAL MOVEMENT
+          <span class="nav-arrow" aria-hidden="true">▾</span>
+        </a>
         <div class="dropdown-menu">
           <a href="#">Give monthly</a>
           <a href="#">Become a water sponsor</a>
@@ -29,7 +32,10 @@
       </div>
       <!-- ABOUT US with dropdown -->
       <div class="nav-item nav-dropdown">
-        <a href="#">ABOUT US</a>
+        <a href="#">
+          ABOUT US
+          <span class="nav-arrow" aria-hidden="true">▾</span>
+        </a>
         <div class="dropdown-menu">
           <a href="#">Our work</a>
           <a href="#">How we work</a>
